# mcp-experiment

./: CLAUDE.md  README.md  pyproject.toml  server.py
benchmarks/: benchmark.py
tests/: conftest.py  test_correctness.py
